Autotools to build erlang stuff and install
Also remove dependancy on erlking in heartbeat

--- a/c_src/Makefile.am
+++ b/c_src/Makefile.am
@@ -1,3 +1,4 @@
+bindir = $(ERLANG_INSTALL_LIB_DIR_erld)/priv/bin
 bin_PROGRAMS = erld
 
 erld_SOURCES = cnode.c debug.c erld.c log.c main.c pid.c slay.c util.c
