--- a/configure.in
+++ b/configure.in
@@ -16,6 +16,8 @@ AM_PROG_CC_C_O
 
 # Checks for header files.
 AC_STDC_HEADERS
+AC_CHECK_HEADERS([proc/readproc.h])
+
 
 AC_ERLANG_CHECK_LIB(erl_interface)
 AC_ERLANG_SUBST_INSTALL_LIB_SUBDIR(AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION)
