--- a/configure.in
+++ b/configure.in
@@ -18,6 +18,7 @@ AM_PROG_CC_C_O
 AC_STDC_HEADERS
 AC_CHECK_HEADERS([proc/readproc.h])
 
+AC_SEARCH_LIBS([readproctab], [proc procps], , AC_MSG_ERROR([Unable to find readproctab(). Make sure either libproc or libprocps is installed]))
 
 AC_ERLANG_CHECK_LIB(erl_interface)
 AC_ERLANG_SUBST_INSTALL_LIB_SUBDIR(AC_PACKAGE_TARNAME, AC_PACKAGE_VERSION)
